--- a/components/hlocwppio-java-quarkus/overlays/development/deployment-patch.yaml
+++ b/components/hlocwppio-java-quarkus/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: hlocwppio-java-quarkus
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-1a14bc4e9a.a3a4.p3.openshiftapps.com/rhtap/rhtap-qe:03b4956e1c35e1a0a2ad21140d85cdfb4f212730@sha256:242bedbe109d89727c29592c0bffef28e678deb7156dbd021bd48832ec82637d
+          name: container-image
